<resources>
	<!-- Application name and the Strings seen in the PositMain -->
    <string name="app_name">POSIT</string>
	<string name="new_find">New Find</string>
	<string name="list_find">List Finds</string>
	<string name="friends">Connected Friends: </string>
	<string name="no_finds">No Finds</string>
	<string name="no_videos">No Videos</string>
	<string name="no_audio_clips">No Audio Clips</string>
	<string name="confirm">Save to DB</string>
    <string name="cancel">Cancel</string>
    <string name="label_victim">Victim Number</string>
    <string name="numberLabel">Number</string>
    <string name="typeLabel">Type</string>
    <string name="descriptionLabel">Description</string>
    <string name="devTeamLabel">Development Team</string>
    <string name="devTeamText1">Prasanna Gautam\tTrishan de Lanerolle</string> 
    <string name="devTeamText2">Ralph Morelli\tAntonio Alcorn</string>
    <string name="devTeamText3">Chris Fei\tQianqian Lin\tGong Chen</string>
    <string name="devTeamText4">Khanh Pham\tPhil Fritzsche\tJames Jackson</string>
    <string name="exit">Are you sure you want to exit?</string>
    <string name="check_saving">Save the data before going back?</string>
    <string name="aboutItem">About</string>
    <string name="backToMain">Return To Main</string>
    <string name="projects">Projects</string>
    <string name="aboutCopyright1">POSIT</string>
    <string name="aboutCopyright2">Portable Open Search and Identification Tool\n</string>
    <string name="aboutDescription"> Developed by the Humanitarian FOSS project</string>
    <string name="httpLink">http://hfoss.org</string>
    <string name="save">Save</string>
    <string name="closing">No Save</string>
    <string name="edit">Edit</string>
    <string name="returnItem">Return</string>
    <string name="barcodeReaderError"><b>The Read Barcode button is currently disabled.
    	Please download and install the <i>Barcode Scanner</i> application.</b></string>
    <string name="notRegistered">This device is not yet registered with the POSIT server.  
    	Please go to settings/register_device on the POSIT server site, then click on 
    	the button below to register your device.</string>
    <string name="registered">This device has already been registered to the server below.  
    	If you would like to change which server you would like to be registered to, go to that server's register device page and then click on the button below.</string>
    
    <!-- Tab Strings -->
    <string name="tt_view_finds">Finds</string>
    <string name="tt_add_finds">Add Find</string>
    <string name="tt_view_main">Main</string>
    <string name="tt_maps_gps">GPS</string>
	<string name="gps">This is a Google Maps-style module. Use it to find your location, follow 
		yourself on the map, and [eventually] view all of your submitted finds. Press 
		<font fgcolor="#ffffffff"><b>start</b></font> to begin."</string>
	<string name="start">Start</string>
	
    <!--  DB Field Names -->
    <string name="idDB">guid</string>
    <string name="nameDB">name</string>
    <string name="latitudeDB">latitude</string>
    <string name="longitudeDB">longitude</string>
    <string name="timeDB">time</string>
    <string name="descriptionDB">description</string>
    <string name="syncedDB">synced</string>
    <string name="photoIdDB">photoId</string>
    <string name="imageUriDB">imageUri</string>
    <string name="imageThumbnailUriDB">imageThumbnailUri</string>
    <string name="videoUriDB">videoUri</string>
    <string name="videoThumbnailUriDB">videoThumbnailUri</string>
    <string name="audioUriDB">audioUri</string>
    <string name="projectId">project_id</string>
    <string name="adhocDB">is_adhoc</string>
    
    <!-- Related to saving to the database -->
    <string name="saved_to_database">Saved to database</string>
    <string name="saved_image_to_db">Saved image to database</string>
    <string name="saved_video_to_db">Saved video to database</string>
    <string name="saved_audio_to_db">Saved audio to database</string>
    <string name="save_failed">Sorry, I cannot save the find</string>
    <string name="deleted_from_database">Deleted from database</string>
    <string name="delete_failed">Cannot delete from database</string>
    
    <string name="map">Map</string>
    <string name="take_picture">Take Picture</string>
    <string name="camera">Camera</string>
    <string name="clear">Clear</string>
    <string name="delete">Delete</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="delete_finds">Delete All Finds</string>
    <string name="delete_videos">Delete All Videos</string>
    <string name="delete_audio_clips">Delete All Audio Clips</string>
    <string name="delete_find_image">Delete Find Image</string>
    <string name="alert_dialog">Are you sure you want to delete all finds?</string>
    <string name="alert_dialog_2">Are you sure you want to delete this find?</string>
    <string name="alert_dialog_video">Are you sure you want to delete all of these videos?</string>
    <string name="alert_dialog_audio">Are you sure you want to delete all of these audio clips?</string>
    <string name="alert_dialog_delete_image">Are you sure you want to delete this image?</string>
    <string name="alert_dialog_delete_video">Do you want to delete this video?</string>
    <string name="alert_dialog_delete_audio">Do you want to delete this audio clip?</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="confirm_delete">Are you sure you want to delete all finds?</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="sync">Sync</string>
    <string name="syncFindText">sync Finds</string>
    <string name="syncImagesText">sync Images</string>
    <string name="alert_dialog_non_unique">This barcode already exists for a find</string>
    <string name="alert_dialog_non_numeric">Barcodes must be numeric.</string>
    <string name="review_audio">Review Audio Clips</string>
    <string name="view_video">View Videos</string>
    
    <!-- Labels -->
    <string name="idLabel">Id: </string>
    <string name="nameLabel">Name</string>
    <string name="ghostData_name">Name</string>
 	<string name="ghostData_description">Description</string>
    <string name="identifierLabel">Id</string>
    <string name="addLabel">Add</string>
    <string name="viewLabel">View</string>
    <string name="taggedLabel">Tagged</string>
    <string name="observationTypeLabel">Observation</string>
    <string name="ageLabel">Age</string>
    <string name="sexLabel">Sex</string>
    <string name="instanceLabel">Name</string>
    <string name="addNewNameLabel">Add New Name</string>
    <string name="addSightingLabel">Add Sighting</string>
    <string name="viewSightingsLabel">View Sightings</string>
    <string name="defaultInstanceLabel">Entry</string>
    <string name="okLabel">OK</string>
    <string name="cancelLabel">Cancel</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="button_scanner">Scan</string>
    <string name="date_time_label">Date and Time</string>
    <string name="settings">Settings</string>
    <string name="barcodeText">Read Barcode</string>
    
    
   <!-- Related to Configuration -->
    <string name="general">General</string>
    <string name="synchronization_on_off">Sync On</string>
    <string name="synchronization_on_off_detail">Toggle to turn synchronization with the server on/off.</string>
    <string name="notify_start_stop">Sync Notification</string>
    <string name="notify_start_stop_detail">Notifies the user when the application starts or stops syncing</string>
    <string name="communication">Communication</string>
    <string name="application_key">Server Registration</string>
    <string name="enter_application_key">Enter the application key</string>
    <string name="sever_barcode_reader">Scan a barcode to register with a POSIT server</string>
    <string name="enter_application_key_detail">Enter the application key for this POSIT instance</string>
    <string name="server_address">Server Address</string>
    <string name="enter_server_address">Enter the server address</string>
    <string name="enter_server_address_detail">Enter the server address for this POSIT instance</string>
    <string name="update_frequency">Sync Frequency</string>
    <string name="enter_update_frequency">How frequently do you want to Sync?</string>
    <string name="enter_update_frequency_detail">Enter in seconds</string>
    
    <!-- ShowProjectActivity -->
    <string name="alert_dialog_devicename">Enter the Device Name</string>
    <string name="alert_dialog_title">Name the device</string>
    <string name="device_registered">Device registered</string>
    <string name="device__not_registered">Sorry, Device could not be registered</string>
    <string name="projectsTitle">Select a Project</string>
    
    <!--  Ad hoc networking -->
    <string name="adhoc_groupsize">Ad-hoc group size</string>
    <string name="adhoc_groupsize_summary">Max number of devices in ad-hoc network</string>
    <string name="adhoc_groupsize_title">Ad-hoc group size:</string>
    
    <!-- Coverage tracking -->
	<string name="trackItem">Coverage Tracker</string>
    <string name="trackerLabel">Location (lat, long, alt): </string>
    <string name="trackerStatusLabel">Status: </string>
    <string name="trackerExpeditionLabel">Expedition: </string>
    <string name="trackerPointsLabel">Points: </string> 
    <string name="trackerSwathLabel">Swath: </string> 
    <string name="trackerPoints">0</string>
    <string name="trackerSwath">0</string>
    <string name="trackerStatus">Unknown </string>
    <string name="trackerExpedition">Unknown </string>    
    <string name="trackerDefaultLocation">Unknown</string>
    <string name="start_tracking_menu_item">Start tracking</string>
    <string name="stop_tracking_menu_item">Stop tracking</string>
    <string name="new_expedition_menu_item">New expedition</string>
<string name="nativeActivity">Native Activity</string>
</resources>
