<PreferenceScreen
xmlns:android="http://schemas.android.com/apk/res/android">
<PreferenceCategory android:title="@string/general">
<CheckBoxPreference
	android:key="SYNC_ON_OFF"
	android:title="@string/synchronization_on_off"
	android:summary="@string/synchronization_on_off_detail"
	android:defaultValue="true"  
   />
<CheckBoxPreference
	android:key="NOTIFY_START_STOP"
	android:title="@string/notify_start_stop"
	android:summary="@string/notify_start_stop_detail"
	android:defaultValue="true"  
   />

</PreferenceCategory>
<PreferenceCategory android:title="@string/communication">
<EditTextPreference  
   android:key="APP_KEY"  
   android:title="@string/application_key"  
   android:summary="@string/enter_application_key"  
   android:dialogTitle="@string/enter_application_key_detail"
   android:defaultValue=""  
   />
<EditTextPreference  
   android:key="SERVER_ADDRESS"  
   android:title="@string/server_address"  
   android:summary="@string/enter_server_address"  
   android:dialogTitle="@string/enter_server_address_detail"
   android:defaultValue="http://dev.posit-project.org"  
   />
   <!-- Username/password  positweb:positserver   -->
   
   <!-- TODO figure out how to use numbers directly -->
<EditTextPreference  
   android:key="UPDATE_FREQ" 
   android:title="@string/update_frequency"  
   android:summary="@string/enter_update_frequency"  
   android:dialogTitle="@string/enter_update_frequency_detail"
   android:defaultValue="30"
   android:numeric="decimal" 
   />

      
</PreferenceCategory>
  
</PreferenceScreen>