<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:orientation ="vertical"
xmlns:android="http://schemas.android.com/apk/res/android"
>
<EditText
android:id = "@+id/addNewNameDialogText"
android:layout_width="200sp"
android:layout_height="wrap_content"
android:hint="@string/nameLabel"
/>
<Spinner android:id="@+id/observationTypeSpinnerDialog"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content" 
				android:drawSelectorOnTop="true" 
				/>

<EditText
android:id="@+id/descriptionText"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:hint="@string/descriptionLabel"
android:scrollbars="vertical"
android:fadingEdge="vertical"/>
<LinearLayout
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="center"
android:orientation="horizontal"
>
<Button
android:id="@+id/addNewNameDialogOkButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity = "center"
android:text="@string/okLabel"
/>
<Button
android:id="@+id/addNewNameDialogCancelButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity = "center"
android:text="@string/cancelLabel"
/>
</LinearLayout>
</LinearLayout>